--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/workshopjvmburung?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Hantu123
+spring.datasource.password=Hantu
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.indent-output=true
